OpafProjectVfMods/force-app/main/default/objects/Case/fields/Biotin_2500mcg__c.field-meta.xml
<CustomField>
    <fullName>Biotin_2500mcg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Biotin 2500mcg</label>
    <type>Checkbox</type>
</CustomField>