OpafProjectVfMods/force-app/main/default/objects/Case/fields/Calcium_600mg__c.field-meta.xml
<CustomField>
    <fullName>Calcium_600mg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calcium 600mg</label>
    <type>Checkbox</type>
</CustomField>