OpafProjectVfMods/force-app/main/default/objects/Case/fields/Does_the_patient_live_in_United_States__c.field-meta.xml
<CustomField>
    <fullName>Does_the_patient_live_in_United_States__c</fullName>
    <label>Does the patient live in United States?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>