OpafProjectVfMods/force-app/main/default/objects/Case/fields/Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status__c</fullName>
    <label>Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Missing Information</fullName>
            </value>
            <value>
                <fullName>Denied by Mail</fullName>
            </value>
            <value>
                <fullName>Denied by Phone</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Pre-Qualified</fullName>
            </value>
            <value>
                <fullName>Saved to Complete Later</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>