OpafProjectVfMods/force-app/main/default/objects/Case/fields/Enrollment_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status_Reason__c</fullName>
    <label>Enrollment Status Reason</label>
    <length>30</length>
    <type>Text</type>
</CustomField>