OpafProjectVfMods/force-app/main/default/objects/Case/fields/External_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Case_Number__c</fullName>
    <externalId>true</externalId>
    <label>Case Number</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>