OpafProjectVfMods/force-app/main/default/objects/Case/fields/External_Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Provider_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Provider ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>