OpafProjectVfMods/force-app/main/default/objects/Case/fields/Facility_Address2__c.field-meta.xml
<CustomField>
    <fullName>Facility_Address2__c</fullName>
    <description>Formula field from Facility record</description>
    <formula>Facility__r.Street_Address__c  &amp; &quot; &quot; &amp; Facility__r.Address_Line_2__c   &amp; &apos;, &apos; &amp;  Facility__r.City__c  &amp; &apos;, &apos; &amp;  Text(Facility__r.State__c)  &amp; &apos;, &apos; &amp;   Facility__r.Zip_Code__c</formula>
    <inlineHelpText>Formula field from Facility record</inlineHelpText>
    <label>Facility Address</label>
    <type>Text</type>
</CustomField>