OpafProjectVfMods/force-app/main/default/objects/Case/fields/Facility_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Contact_First_Name__c</fullName>
    <description>Formula field from Facility record</description>
    <formula>Facility__r.Facility_Contact_First_Name__c</formula>
    <inlineHelpText>Formula field from Facility record</inlineHelpText>
    <label>Facility Contact First Name</label>
    <type>Text</type>
</CustomField>