OpafProjectVfMods/force-app/main/default/objects/Case/fields/Facility_Contact_Phone_Ext__c.field-meta.xml
<CustomField>
    <fullName>Facility_Contact_Phone_Ext__c</fullName>
    <description>Formula field from Facility</description>
    <formula>Facility__r.Facility_Contact_Phone_Extension__c</formula>
    <inlineHelpText>Formula field from Facility</inlineHelpText>
    <label>Facility Contact Phone Ext</label>
    <type>Text</type>
</CustomField>