OpafProjectVfMods/force-app/main/default/objects/Case/fields/Folic_Acid_400mcg__c.field-meta.xml
<CustomField>
    <fullName>Folic_Acid_400mcg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Folic Acid 400mcg</label>
    <type>Checkbox</type>
</CustomField>