OpafProjectVfMods/force-app/main/default/objects/Case/fields/Has_No_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Has_No_Insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has No Insurance</label>
    <type>Checkbox</type>
</CustomField>