OpafProjectVfMods/force-app/main/default/objects/Case/fields/HealthCloudGA__FinancialValue__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__FinancialValue__c</fullName>
    <description>Potential savings by closing this care gap.</description>
    <inlineHelpText>Potential savings by closing this care gap.</inlineHelpText>
    <label>Financial Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>