OpafProjectVfMods/force-app/main/default/objects/Case/fields/Hub_Patient_ID__c.field-meta.xml
<CustomField>
    <fullName>Hub_Patient_ID__c</fullName>
    <formula>Patient__r.External_Patient_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hub Patient ID</label>
    <type>Text</type>
</CustomField>