OpafProjectVfMods/force-app/main/default/objects/Case/fields/ICD_10_Diagnosis_Code__c.field-meta.xml
<CustomField>
    <fullName>ICD_10_Diagnosis_Code__c</fullName>
    <label>ICD-10 Diagnosis Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>F20.0</fullName>
            </value>
            <value>
                <fullName>F20.1</fullName>
            </value>
            <value>
                <fullName>F20.2</fullName>
            </value>
            <value>
                <fullName>F20.3</fullName>
            </value>
            <value>
                <fullName>F20.5</fullName>
            </value>
            <value>
                <fullName>F20.8</fullName>
            </value>
            <value>
                <fullName>F20.9</fullName>
            </value>
            <value>
                <fullName>F31.0</fullName>
            </value>
            <value>
                <fullName>F31.1</fullName>
            </value>
            <value>
                <fullName>F31.2</fullName>
            </value>
            <value>
                <fullName>F31.3</fullName>
            </value>
            <value>
                <fullName>F31.4</fullName>
            </value>
            <value>
                <fullName>F31.5</fullName>
            </value>
            <value>
                <fullName>F31.6</fullName>
            </value>
            <value>
                <fullName>F31.7</fullName>
            </value>
            <value>
                <fullName>F31.8</fullName>
            </value>
            <value>
                <fullName>F31.9</fullName>
            </value>
            <value>
                <fullName>F32.0</fullName>
            </value>
            <value>
                <fullName>F32.1</fullName>
            </value>
            <value>
                <fullName>F32.2</fullName>
            </value>
            <value>
                <fullName>F32.3</fullName>
            </value>
            <value>
                <fullName>F32.4</fullName>
            </value>
            <value>
                <fullName>F32.5</fullName>
            </value>
            <value>
                <fullName>F32.8</fullName>
            </value>
            <value>
                <fullName>F32.9</fullName>
            </value>
            <value>
                <fullName>F33.0</fullName>
            </value>
            <value>
                <fullName>F33.1</fullName>
            </value>
            <value>
                <fullName>F33.2</fullName>
            </value>
            <value>
                <fullName>F33.3</fullName>
            </value>
            <value>
                <fullName>F33.4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>