OpafProjectVfMods/force-app/main/default/objects/Case/fields/Iron_65mg__c.field-meta.xml
<CustomField>
    <fullName>Iron_65mg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Iron 65mg</label>
    <type>Checkbox</type>
</CustomField>