OpafProjectVfMods/force-app/main/default/objects/Case/fields/Is_Due_For_Re_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Is_Due_For_Re_Enrollment__c</fullName>
    <formula>AND(Enrollment_End_Date__c - Today() &lt;=45, Enrollment_End_Date__c - Today() &gt;=0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Due For Re-Enrollment</label>
    <type>Checkbox</type>
</CustomField>