OpafProjectVfMods/force-app/main/default/objects/Case/fields/JYNARQUE_Starter_Kit__c.field-meta.xml
<CustomField>
    <fullName>JYNARQUE_Starter_Kit__c</fullName>
    <label>JYNARQUE Starter Kit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>