OpafProjectVfMods/force-app/main/default/objects/Case/fields/Magnesium_250mg__c.field-meta.xml
<CustomField>
    <fullName>Magnesium_250mg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Magnesium 250mg</label>
    <type>Checkbox</type>
</CustomField>