OpafProjectVfMods/force-app/main/default/objects/Case/fields/Medical_Plan_Phone__c.field-meta.xml
<CustomField>
    <fullName>Medical_Plan_Phone__c</fullName>
    <label>Medical Plan Phone</label>
    <type>Phone</type>
</CustomField>