OpafProjectVfMods/force-app/main/default/objects/Case/fields/Missing_Info_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Missing_Info_Last_Updated__c</fullName>
    <label>Missing Info Last Updated</label>
    <type>Date</type>
</CustomField>