OpafProjectVfMods/force-app/main/default/objects/Case/fields/Multi_Complete__c.field-meta.xml
<CustomField>
    <fullName>Multi_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi Complete</label>
    <type>Checkbox</type>
</CustomField>