OpafProjectVfMods/force-app/main/default/objects/Case/fields/Patient_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Patient_Birthdate__c</fullName>
    <description>Formula field from Patient</description>
    <formula>Patient__r.Birthdate</formula>
    <inlineHelpText>Formula field from Patient</inlineHelpText>
    <label>Patient Birthdate</label>
    <type>Date</type>
</CustomField>