OpafProjectVfMods/force-app/main/default/objects/Case/fields/Patient_City__c.field-meta.xml
<CustomField>
    <fullName>Patient_City__c</fullName>
    <description>Formula field from Patient record</description>
    <formula>Patient__r.City__c</formula>
    <inlineHelpText>Formula field from Patient record</inlineHelpText>
    <label>Patient City</label>
    <type>Text</type>
</CustomField>