OpafProjectVfMods/force-app/main/default/objects/Case/fields/Patient_Email__c.field-meta.xml
<CustomField>
    <fullName>Patient_Email__c</fullName>
    <description>Formula field from Patient</description>
    <formula>Patient__r.Email</formula>
    <inlineHelpText>Formula field from Patient</inlineHelpText>
    <label>Patient Email</label>
    <type>Text</type>
</CustomField>