OpafProjectVfMods/force-app/main/default/objects/Case/fields/Patient_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_First_Name__c</fullName>
    <description>Denormalized field on Case</description>
    <inlineHelpText>Denormalized field on Case</inlineHelpText>
    <label>Patient First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>