OpafProjectVfMods/force-app/main/default/objects/Case/fields/Patient_Gender__c.field-meta.xml
<CustomField>
    <fullName>Patient_Gender__c</fullName>
    <description>Formula field from Patient record</description>
    <formula>Text(Patient__r.Gender__c)</formula>
    <inlineHelpText>Formula field from Patient record</inlineHelpText>
    <label>Patient Gender</label>
    <type>Text</type>
</CustomField>