OpafProjectVfMods/force-app/main/default/objects/Case/fields/Patient_Last_Name2__c.field-meta.xml
<CustomField>
    <fullName>Patient_Last_Name2__c</fullName>
    <description>formula field from Patient record. Normalized field</description>
    <formula>Patient__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>formula field from Patient record. Normalized field</inlineHelpText>
    <label>Patient Last Name</label>
    <type>Text</type>
</CustomField>