OpafProjectVfMods/force-app/main/default/objects/Case/fields/Patient_Legal_Rep_Phone__c.field-meta.xml
<CustomField>
    <fullName>Patient_Legal_Rep_Phone__c</fullName>
    <description>Formula field from Patient record</description>
    <formula>Patient__r.Legal_Rep_Phone__c</formula>
    <inlineHelpText>Formula field from Patient record</inlineHelpText>
    <label>Patient Legal Rep Phone</label>
    <type>Text</type>
</CustomField>