OpafProjectVfMods/force-app/main/default/objects/Case/fields/Patient_Legal_Rep_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Patient_Legal_Rep_Relationship__c</fullName>
    <description>Formula field from Patient record</description>
    <formula>Text(Patient__r.Legal_RepRelTypec__c)</formula>
    <inlineHelpText>Formula field from Patient record</inlineHelpText>
    <label>Patient Legal Rep Relationship</label>
    <type>Text</type>
</CustomField>