OpafProjectVfMods/force-app/main/default/objects/Case/fields/Patient_SSN__c.field-meta.xml
<CustomField>
    <fullName>Patient_SSN__c</fullName>
    <description>Formula field from Patient</description>
    <formula>Patient__r.SSN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field from Patient</inlineHelpText>
    <label>Patient SSN</label>
    <type>Text</type>
</CustomField>