OpafProjectVfMods/force-app/main/default/objects/Case/fields/Patient_State__c.field-meta.xml
<CustomField>
    <fullName>Patient_State__c</fullName>
    <description>Formula field from Patient</description>
    <formula>Text(Patient__r.State__c)</formula>
    <inlineHelpText>Formula field from Patient</inlineHelpText>
    <label>Patient State</label>
    <type>Text</type>
</CustomField>