OpafProjectVfMods/force-app/main/default/objects/Case/fields/Patient_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Patient_Street_Address__c</fullName>
    <description>Formula field from Patient record</description>
    <formula>Patient__r.Street_Address__c</formula>
    <inlineHelpText>Formula field from Patient record</inlineHelpText>
    <label>Patient Street Address</label>
    <type>Text</type>
</CustomField>