OpafProjectVfMods/force-app/main/default/objects/Case/fields/Patient_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Patient_Zip_Postal_Code__c</fullName>
    <description>Formula field from Patient record</description>
    <formula>Patient__r.Zip_Code__c</formula>
    <inlineHelpText>Formula field from Patient record</inlineHelpText>
    <label>Patient Zip/Postal Code</label>
    <type>Text</type>
</CustomField>