OpafProjectVfMods/force-app/main/default/objects/Case/fields/Pharmacy_Policyholder_DOB__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Policyholder_DOB__c</fullName>
    <label>Pharmacy Policyholder DOB</label>
    <type>Date</type>
</CustomField>