OpafProjectVfMods/force-app/main/default/objects/Case/fields/Pharmacy_Policyholder_Name__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Policyholder_Name__c</fullName>
    <label>Pharmacy Policyholder Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>