OpafProjectVfMods/force-app/main/default/objects/Case/fields/Pharmacy_Rx_PCN__c.field-meta.xml
<CustomField>
    <fullName>Pharmacy_Rx_PCN__c</fullName>
    <label>Pharmacy Rx PCN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>