OpafProjectVfMods/force-app/main/default/objects/Case/fields/Prescriber_DEA__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_DEA__c</fullName>
    <description>Formula field from Prescriber record</description>
    <formula>Patient__r.DEA__c</formula>
    <inlineHelpText>Formula field from Prescriber record</inlineHelpText>
    <label>Prescriber DEA #</label>
    <type>Text</type>
</CustomField>