OpafProjectVfMods/force-app/main/default/objects/Case/fields/Prescriber_First_Name2__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_First_Name2__c</fullName>
    <description>Formula field from Prescriber record</description>
    <formula>Prescriber__r.FirstName</formula>
    <inlineHelpText>Formula field from Prescriber record</inlineHelpText>
    <label>Prescriber First Name</label>
    <type>Text</type>
</CustomField>