OpafProjectVfMods/force-app/main/default/objects/Case/fields/Prescriber_Last_Name2__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_Last_Name2__c</fullName>
    <description>Formula field from Prescriber record</description>
    <formula>Prescriber__r.LastName</formula>
    <inlineHelpText>Formula field from Prescriber record</inlineHelpText>
    <label>Prescriber Last Name</label>
    <type>Text</type>
</CustomField>