OpafProjectVfMods/force-app/main/default/objects/Case/fields/Prescriber_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_Last_Name__c</fullName>
    <label>Prescriber Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>