OpafProjectVfMods/force-app/main/default/objects/Case/fields/Prescriber_NPI__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_NPI__c</fullName>
    <description>Formula field from Prescriber record</description>
    <formula>Patient__r.NPI__c</formula>
    <inlineHelpText>Formula field from Prescriber record</inlineHelpText>
    <label>Prescriber NPI #</label>
    <type>Text</type>
</CustomField>