OpafProjectVfMods/force-app/main/default/objects/Case/fields/Prescriber_State_License__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_State_License__c</fullName>
    <description>Formula field from Prescriber record</description>
    <formula>Prescriber__r.State_License__c</formula>
    <inlineHelpText>Formula field from Prescriber record</inlineHelpText>
    <label>Prescriber State License #</label>
    <type>Text</type>
</CustomField>