OpafProjectVfMods/force-app/main/default/objects/Case/fields/Prescriber_State_Licensure__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_State_Licensure__c</fullName>
    <description>Formula field from Prescriber record</description>
    <formula>Text( Prescriber__r.State__c )</formula>
    <inlineHelpText>Formula field from Prescriber record</inlineHelpText>
    <label>Prescriber State Licensure</label>
    <type>Text</type>
</CustomField>