OpafProjectVfMods/force-app/main/default/objects/Case/fields/Prescrip_Dosage__c.field-meta.xml
<CustomField>
    <fullName>Prescrip_Dosage__c</fullName>
    <description>Formula field from Prescription record</description>
    <formula>Text(Prescription1__r.Dosage__c)</formula>
    <inlineHelpText>Formula field from Prescription record</inlineHelpText>
    <label>Prescrip Dosage</label>
    <type>Text</type>
</CustomField>