OpafProjectVfMods/force-app/main/default/objects/Case/fields/Prescrip_Hosp_Admit_Date_SAMSCA__c.field-meta.xml
<CustomField>
    <fullName>Prescrip_Hosp_Admit_Date_SAMSCA__c</fullName>
    <description>Formula field from Prescription</description>
    <formula>Prescription1__r.Hospital_Admission_Date__c</formula>
    <inlineHelpText>Formula field from Prescription</inlineHelpText>
    <label>Prescrip Hosp Admit Date (SAMSCA)</label>
    <type>Date</type>
</CustomField>