OpafProjectVfMods/force-app/main/default/objects/Case/fields/Prescrip_Hospital_Presischarge_Dt_SAMSCA__c.field-meta.xml
<CustomField>
    <fullName>Prescrip_Hospital_Presischarge_Dt_SAMSCA__c</fullName>
    <description>Formula field from Prescription</description>
    <formula>Prescription1__r.HospitalDischarge_Date__c</formula>
    <inlineHelpText>Formula field from Prescription</inlineHelpText>
    <label>Prescrip Hospital Discharge Dt (SAMSCA)</label>
    <type>Date</type>
</CustomField>