OpafProjectVfMods/force-app/main/default/objects/Case/fields/Prescrip_Next_Injection_ABILMAINT__c.field-meta.xml
<CustomField>
    <fullName>Prescrip_Next_Injection_ABILMAINT__c</fullName>
    <description>Formula from Prescription</description>
    <formula>Prescription1__r.Next_Injection__c</formula>
    <inlineHelpText>Formula from Prescription</inlineHelpText>
    <label>Prescrip Nxt Injection(ABILIFY MAINTENA)</label>
    <type>Date</type>
</CustomField>