OpafProjectVfMods/force-app/main/default/objects/Case/fields/Prescrip_Qty_SAMSCA_During_Stay_SAMSCA__c.field-meta.xml
<CustomField>
    <fullName>Prescrip_Qty_SAMSCA_During_Stay_SAMSCA__c</fullName>
    <description>Formula field from Prescription</description>
    <formula>Prescription1__r.Qty_SAMSCA_During_Stay__c</formula>
    <inlineHelpText>Formula field from Presription</inlineHelpText>
    <label>Prescrip Qty SAMSCA During Stay(SAMSCA)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>