OpafProjectVfMods/force-app/main/default/objects/Case/fields/Prescrip_REMS_ID_Number_JYNARQUE__c.field-meta.xml
<CustomField>
    <fullName>Prescrip_REMS_ID_Number_JYNARQUE__c</fullName>
    <description>Formula field from Prescription record</description>
    <formula>Prescription1__r.REMS_ID_Number__c</formula>
    <inlineHelpText>Formula field from Prescription record</inlineHelpText>
    <label>Prescrip REMS ID Number (JYNARQUE)</label>
    <type>Text</type>
</CustomField>