OpafProjectVfMods/force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABILIFY_ASIMTUFII</fullName>
                <label>ABILIFY ASIMTUFII</label>
            </value>
            <value>
                <fullName>ABILIFY_MAINTENA</fullName>
                <label>ABILIFY MAINTENA</label>
            </value>
            <value>
                <fullName>JYNARQUE</fullName>
            </value>
            <value>
                <fullName>REXULTI</fullName>
            </value>
            <value>
                <fullName>SAMSCA</fullName>
            </value>
            <value>
                <fullName>NUEDEXTA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>