OpafProjectVfMods/force-app/main/default/objects/Case/fields/Re_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Re_Enrollment__c</fullName>
    <formula>HYPERLINK(&quot;/Prescriber/s/re-enrollment-application?caseId=&quot;+ Id , &apos;Begin Re-Enrollment&apos;,&apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Re-Enrollment</label>
    <type>Text</type>
</CustomField>