OpafProjectVfMods/force-app/main/default/objects/Case/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Requestor)</relationshipLabel>
    <relationshipName>Requestors</relationshipName>
    <type>Lookup</type>
</CustomField>