OpafProjectVfMods/force-app/main/default/objects/Case/fields/Rx_Fax_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Rx_Fax_Timestamp__c</fullName>
    <label>Rx Fax Timestamp</label>
    <type>DateTime</type>
</CustomField>