OpafProjectVfMods/force-app/main/default/objects/Case/fields/Rx_Send_Method__c.field-meta.xml
<CustomField>
    <fullName>Rx_Send_Method__c</fullName>
    <label>Rx Send Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eScribe</fullName>
            </value>
            <value>
                <fullName>Download and Upload OPAF provided Rx Template</fullName>
            </value>
            <value>
                <fullName>Upload your Rx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>