OpafProjectVfMods/force-app/main/default/objects/Case/fields/Same_ICD_10__c.field-meta.xml
<CustomField>
    <fullName>Same_ICD_10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same ICD 10</label>
    <type>Checkbox</type>
</CustomField>