OpafProjectVfMods/force-app/main/default/objects/Case/fields/Ship_Address_Line2__c.field-meta.xml
<CustomField>
    <fullName>Ship_Address_Line2__c</fullName>
    <label>Ship Address Line2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>