OpafProjectVfMods/force-app/main/default/objects/Case/fields/Ship_Local_Care_Center_Phone__c.field-meta.xml
<CustomField>
    <fullName>Ship_Local_Care_Center_Phone__c</fullName>
    <label>Ship Local Care Center Phone</label>
    <type>Phone</type>
</CustomField>