OpafProjectVfMods/force-app/main/default/objects/Case/fields/Ship_Phone__c.field-meta.xml
<CustomField>
    <fullName>Ship_Phone__c</fullName>
    <label>Ship Phone</label>
    <type>Phone</type>
</CustomField>