OpafProjectVfMods/force-app/main/default/objects/Case/fields/Ship_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_Street_Address__c</fullName>
    <label>Ship Street Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>