OpafProjectVfMods/force-app/main/default/objects/Case/fields/Ship_Type__c.field-meta.xml
<CustomField>
    <fullName>Ship_Type__c</fullName>
    <label>Ship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Prescribing Provider</fullName>
            </value>
            <value>
                <fullName>Local Care Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>