OpafProjectVfMods/force-app/main/default/objects/Case/fields/Super_B_Comp_with_Folic_Biotin_and_C__c.field-meta.xml
<CustomField>
    <fullName>Super_B_Comp_with_Folic_Biotin_and_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Super B-Comp with Folic, Biotin, and C</label>
    <type>Checkbox</type>
</CustomField>