OpafProjectVfMods/force-app/main/default/objects/Case/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Patient Assistance Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>