OpafProjectVfMods/force-app/main/default/objects/Case/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Prescriber</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>