OpafProjectVfMods/force-app/main/default/objects/Case/fields/Vitamin_A_2400_mcg_8000_IU__c.field-meta.xml
<CustomField>
    <fullName>Vitamin_A_2400_mcg_8000_IU__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vitamin A 2400 mcg (8000 IU)</label>
    <type>Checkbox</type>
</CustomField>