OpafProjectVfMods/force-app/main/default/objects/Case/fields/Vitamin_B12_1000mcg__c.field-meta.xml
<CustomField>
    <fullName>Vitamin_B12_1000mcg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vitamin B12 1000mcg</label>
    <type>Checkbox</type>
</CustomField>