OpafProjectVfMods/force-app/main/default/objects/Case/fields/Vitamin_B6_100mg__c.field-meta.xml
<CustomField>
    <fullName>Vitamin_B6_100mg__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vitamin B6 100mg</label>
    <type>Checkbox</type>
</CustomField>