OpafProjectVfMods/force-app/main/default/objects/Case/fields/Vitamin_D3_2000iu__c.field-meta.xml
<CustomField>
    <fullName>Vitamin_D3_2000iu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vitamin D3 2000iu</label>
    <type>Checkbox</type>
</CustomField>