OpafProjectVfMods/force-app/main/default/objects/Case/fields/Zinc_30mg_Gluconate__c.field-meta.xml
<CustomField>
    <fullName>Zinc_30mg_Gluconate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zinc 30mg (Gluconate)</label>
    <type>Checkbox</type>
</CustomField>