OpafProjectVfMods/force-app/main/default/objects/Case/recordTypes/Application.recordType-meta.xml
<RecordType>
    <fullName>Application</fullName>
    <active>true</active>
    <businessProcess>HealthCloudGA__Healthcare</businessProcess>
    <description>Custom REcord Type</description>
    <label>Application</label>
</RecordType>