OpafProjectVfMods/force-app/main/default/objects/Case/recordTypes/HealthCloudGA__CarePlan.recordType-meta.xml
<RecordType>
    <fullName>HealthCloudGA__CarePlan</fullName>
    <active>true</active>
    <businessProcess>HealthCloudGA__Healthcare</businessProcess>
    <description>Defines a care plan for an individual and their care team</description>
    <label>CarePlan</label>
</RecordType>